# flowimds

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-notes.yml
docs/: CONTRIBUTING.md  CONTRIBUTING_ja.md  README.ja.md  TODO.md  TODO_ja.md  plan.md  usage.ja.md  usage.md  usage_documentation_plan.md  way_of_writing_readme.md
flowimds/: __init__.py  pipeline.py
flowimds/io/: discovery.py
flowimds/steps/: __init__.py  base.py  binarize.py  rotate.py
flowimds/utils/: utils.py
samples/: README.md  basic_usage.py
scripts/: benchmark_pipeline.py  generate_release_notes.py  generate_test_data.py
tests/: conftest.py  test_pipeline.py
tests/integration/: test_pipeline_resize.py
tests/unit/: test_binarize.py  test_denoise.py  test_flip.py  test_pipeline.py  test_resize.py  test_utils.py
